# EdgeLLM-Lab

./: .gitignore  README.md  README.zh-CN.md  cli.py  main.py  pyproject.toml
backend/: __init__.py  base.py  executorch_backend.py  litert_backend.py  llama_cpp_backend.py  mlc_backend.py  onnx_backend.py  torch_backend.py
benchmark/: __init__.py  benchmark_attention.py  benchmark_inference.py  benchmark_memory.py  benchmark_ppl.py  benchmark_quant.py  registry.py
compression/: __init__.py  low_rank.py  pruning.py  report.py  selection.py
compression/pruning/: __init__.py  base.py  magnitude.py  model.py  nm.py  registry.py  structured.py
compression/quantization/: __init__.py  awq.py  base.py  gptq.py  int4.py  int8.py  kv_quant.py  model.py  packing.py  quant_linear.py  registry.py
configs/: smoke.yaml  tiny_gpt.yaml
configs/compression/: tiny_gpt_prune_int4.yaml
configs/execution/: autodl.yaml  autodl_nanochat_smoke.yaml  clearml.yaml  colab.yaml  huggingface_jobs.yaml  local.yaml
configs/multimodal/: tiny_vlm_smoke.yaml
core/: __init__.py  config.py  extensions.py  provenance.py  registry.py  runtime.py  specs.py
data/: __init__.py  dataloader.py  dataset.py  tokenizer.py
data/datasets/: __init__.py  synthetic_vision_language.py
deploy/: README.md
docs/: ARCHITECTURE.md  COMPRESSION.md  COMPRESSION.zh-CN.md  EXTENDING.md  MULTIMODAL.md  MULTIMODAL.zh-CN.md  NANOCHAT_AUTODL.md  NANOCHAT_AUTODL.zh-CN.md  OPEN_SOURCE_INTEGRATION.md  OPTIMIZERS.md  OPTIMIZERS.zh-CN.md  PAPER_REPRODUCTION.md  PAPER_REPRODUCTION.zh-CN.md  REMOTE_EXECUTION.md  REMOTE_EXECUTION.zh-CN.md
execution/: __init__.py  manager.py  profiles.py  specs.py  worker.py
execution/artifacts/: __init__.py  base.py  huggingface_hub.py  (+2 more)
experiments/: __init__.py  config.py  context.py  pipeline.py  report.py  run_store.py  runner.py  stage.py
external_projects/: .gitignore  README.md
inference/: __init__.py  engine.py  generate.py  kv_cache.py  prompt_cache.py  sampler.py  stream.py
integrations/: README.md  __init__.py  base.py  registry.py
models/: __init__.py  deepseek_like.py  io.py  llama_like.py  registry.py  tiny_gpt.py
modules/: __init__.py  attention.py  block.py  mlp.py  moe.py  norm.py  rope.py
paper_reproductions/: README.md
reports/: README.md
reproduction/: __init__.py  evaluator.py  manager.py  report.py  specs.py  workspace.py
tests/: __init__.py
training/: __init__.py  checkpoint.py  distill.py  lora.py  losses.py  optim.py  pretrain.py  schedulers.py  sft.py  trainer.py
(+112 files in other folders)
