[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgellm-lab"
version = "0.1.0"
description = "A modular personal LLM learning and experimentation framework."
requires-python = ">=3.9"
dependencies = [
  "torch",
  "PyYAML",
]

[project.scripts]
edgellm = "cli:main"

[tool.setuptools]
py-modules = ["cli", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "backend*",
  "benchmark*",
  "compression*",
  "core*",
  "data*",
  "experiments*",
  "integrations*",
  "inference*",
  "models*",
  "modules*",
  "training*",
]
exclude = ["external_projects*", "runs*", "tests*"]
