[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgellm-lab"
version = "0.1.0"
description = "A modular personal LLM learning and experimentation framework."
requires-python = ">=3.9"
dependencies = [
  "torch",
  "PyYAML",
]

[project.optional-dependencies]
hf = ["huggingface_hub>=0.31"]
clearml = ["clearml>=1.16"]
s3 = ["fsspec>=2024.6", "s3fs>=2024.6"]
cloud = [
  "huggingface_hub>=0.31",
  "clearml>=1.16",
  "fsspec>=2024.6",
  "s3fs>=2024.6",
]

[project.scripts]
edgellm = "cli:main"

[tool.setuptools]
py-modules = ["cli", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "backend*",
  "benchmark*",
  "compression*",
  "core*",
  "data*",
  "experiments*",
  "execution*",
  "integrations*",
  "inference*",
  "models*",
  "modules*",
  "reproduction*",
  "training*",
]
exclude = ["external_projects*", "runs*", "tests*"]
